Alignment issues

--- a/front-end/src/app/frontend-sections/footer/footer.component.css
+++ b/front-end/src/app/frontend-sections/footer/footer.component.css
@@ -51,6 +51,7 @@ footer.footer{background: #000; padding: 60px 0}
 .footer_link_wrap .col {width: 50%; float: left; min-height: 170px;}
 .footer_social_wrap {width: 100%;float: left;}
 .mobile_clear{clear: both;}
+.subscribe_wrap form input{margin: 4px 0}
 }
 
 .invalid-feedback { display: block; }
