--- a/front-end/src/app/frontend/static-pages/contact/contact.component.css
+++ b/front-end/src/app/frontend/static-pages/contact/contact.component.css
@@ -208,7 +208,7 @@ h3.singleStory_Subtitle {font-size: 16px;}
 .btn-orange:hover { background-color: #e75223; color: #fff; border-color: #e75223; }
 .contact-form{ margin-bottom:20px }
 .contact-form .form-group label { font-weight: bold; color: #000000 !important; }
-.contact_address_wrap ul li{ display: flex; -webkit-display: flex; -moz-display: flex; -o-display: flex; margin: 10px 0; align-items: center; font-size: 16px}
+.contact_address_wrap ul li{ display: flex; -webkit-display: flex; -moz-display: flex; -o-display: flex; margin: 10px 0; align-items: flex-start; font-size: 16px}
 .contact_address_wrap ul li .address_icon{width: 40px;min-width: 40px; max-width: 40px; text-align: center; margin-right: 10px;}
 
 /*------------------------------Contact PAge------------------------------*/
